--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html lang="fr" dir="ltr">
+<!DOCTYPE html>
     <head>
       <link rel="stylesheet" href="./styles.css">
     </head>
@@ -21,8 +21,8 @@
                 <button>REGISTER FOR FREE</button>
             </div>
             <div class="main_part_person">
-                <h2>Learn from the pros</h2>
-                <div>
+                <h2><span>Learn</span> from the pros</h2>
+                <div class="avatar">
                     <div>
                         <img src="./images/avatar1.png" alt="">
                         <h3>Phillip Massey</h3>
@@ -46,9 +46,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="testimonial">
             <div>
-                <img src="./images/avatar5.png  " alt="">
+                <img src="./images/avatar5.png" alt="">
                 <div>
                     <blockquote>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</blockquote>
                     <p>Person Name</p>    
@@ -56,63 +56,63 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h1>Most popular tutorials</h1>
+        <section class="tutorials">
+            <h1>Most <span>popular</span> tutorials</h1>
             <div>
-                <div>
+                <div class="video">
                     <img src="./images/video1.png" alt="">
                     <h2>Diagonal Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
+                    <div class="rating_author">
                         <img src="./images/avatar1_30x30.png" alt="">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="rating">
                         <div>
                             <img src="./images/rating1.png" alt="">
                         </div>
                         <p>8 min</p>
                     </div>
                 </div>
-                <div>
+                <div class="video">
                     <img src="./images/video2.png" alt="">
                     <h2>Sad Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
+                    <div class="rating_author">
                         <img src="./images/avatar1_30x30.png" alt="">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="rating">
                         <div>
                             <img src="./images/rating2.png" alt="">
                         </div>
                         <p>8 min</p>
                     </div>
                 </div>
-                <div>
+                <div class="video">
                     <img src="./images/video3.png" alt="">
                     <h2>Natural Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
+                    <div class="rating_author">
                         <img src="./images/avatar1_30x30.png" alt="">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="rating">
                         <div>
                             <img src="./images/rating3.png" alt="">
                         </div>
                         <p>8 min</p>
                     </div>
                 </div>
-                <div>
+                <div class="video">
                     <img src="./images/video4.png" alt="">
                     <h2>Happy Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
+                    <div class="rating_author">
                         <img src="./images/avatar1_30x30.png" alt="">
                         <h3>Phillip Massey</h3>
                     </div>
-                    <div>
+                    <div class="rating">
                         <div>
                             <img src="./images/rating4.png" alt="">
                         </div>
@@ -121,8 +121,8 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h1>Free membership</h1>
+        <section class="membership">
+            <h1><span>Free</span> membership</h1>
             <div>
                 <div>
                     <img src="./images/smile.png" alt="">
@@ -147,15 +147,15 @@
             </div>
             <button>REGISTER FOR FREE</button>
         </section>
-        <section>
+        <section class="faq">
             <h1>F.A.Q.</h1>
             <div>
                 <div>
-                    <div>
+                    <div class="question">
                         <h2>How does this work?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-                    <div>
+                    <div class="question">
                         <h2>How does this work?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
@@ -163,11 +163,11 @@
             </div>
             <div>
                 <div>
-                    <div>
+                    <div class="question">
                         <h2>How does this work?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-                    <div>
+                    <div class="question">
                         <h2>How does this work?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
@@ -177,9 +177,9 @@
     </main>
     <footer>
         <div>
-            <div>
+            <div class="footer_element">
                 <img src="./images/logo.png" alt="">
-                </div>
+                <div>
                     <a><img src="./images/Facebook_White.png" alt=""></a>
                     <a><img src="./images/Twitter_White.png" alt=""></a>
                     <a><img src="./images/Instagram_White.png" alt=""></a>
